[package]
name = "grock-chain"
authors = ["Sabaun Taraki <sabaun.dev@gmail.com>"]
description = "A simple blockchain implementation in Rust."
repository = "https://github.com/techraed/grock-chain"
readme = "README.md"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "grock-chain"
path = "bin/main.rs"

[dependencies]
serde ={ version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
