[package]
name = "grok-chain"
authors = ["Sabaun Taraki <sabaun.dev@gmail.com>"]
description = "A simple blockchain implementation in Rust."
repository = "https://github.com/techraed/grok-chain"
readme = "README.md"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "grok-chain"
path = "bin/main.rs"

[dependencies]
k256 = { version = "0.13.4", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"]}
sled = "0.34.7"
serde ={ version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
